--- a/_posts/2013-09-10-beijing.markdown
+++ b/_posts/2013-09-10-beijing.markdown
@@ -6,14 +6,14 @@ comments: true
 categories: 北京
 ---
 
-#起因
+# 起因
 
 终于进了一趟京城。京华烟云犹在目，历历江南草未凋。上上周离开的时候还是夏天的江南，今天就在这初冬寒气微露的北国写着这篇日志。
 总结一趟自己进城的感受。还有兼写下点感受，主要是今天晚上不想看书，想早点睡觉去，所以在这里写写感想啥的。
 
 <!--more-->
 
-##进城方法
+## 进城方法
 
 进入北京的时候选择的是916快线，这个其实感觉非常好，就是当时和一个遥感所的同学在一起所以选择了在地铁三元桥站下车。结果当我回去的时候才发
 地铁三元桥站是916的慢線，更加坑爹的是回去的916几乎是见站就停，一路回去的更加艰难。 
@@ -28,7 +28,7 @@ categories: 北京
 因为我一路都是避开京城的高峰流量在行动所以感觉到京城不是特别得堵，但是回来怀柔的路上遇见一位在北京城上班的怀柔当地人才知道他每天早上5：40起来，
 六点十分出发，路上随便吃点很快到了京城，就这样他遇上堵车的时候到北京也要到早上9：40左右，比较而言我4个小时回来还算不错啊！
 
-##京城印象
+## 京城印象
 
 京城确实是繁华，比较而言，北京地铁2元随便坐的气魄让你不得不佩服！到底是首都。
 
@@ -39,15 +39,15 @@ categories: 北京
  
 
 
-##人大印象
+## 人大印象
 
-借着MM的光，我把人大几乎逛遍了，人大和南大还是挺像的。都是在闹事之中，地方也不是很大，但是人大的设备比南大的鼓楼小区繁华现代多了。南大很多地方还有着上个世纪七八十年代的印记，人大已经几乎没有了。
+借光，我把人大几乎逛遍了，人大和南大还是挺像的。都是在闹事之中，地方也不是很大，但是人大的设备比南大的鼓楼小区繁华现代多了。南大很多地方还有着上个世纪七八十年代的印记，人大已经几乎没有了。
 
 第二个印象——女生太多了！真的是太多了！这个就是说你满眼看过去，基本都是女生！不过和我关系不大。
 
 其他印象暂时没有，等待进一步发掘。
 
-##英语考试
+## 英语考试
 
 出了英语考试的分数，84飘过。其实这个分数也不错，但是还是感觉国内考试变态一点。
 
@@ -55,7 +55,7 @@ categories: 北京
 
 所以还是要好好准备，不过中国准备的是应试技巧，老外考试准备的实实在在的实力。
 
-##国科大上课
+## 国科大上课
 
 国科大的课表显然和我的生物钟不太协调，所以今天没怎么看书，先调整调整状态。明天早起背会GRE单词，然后去吃早饭，去上课的时候买个敏敏说的面包吃！不然这个12：30才下课的时间实在是折磨。
 
