--- a/_posts/2014-04-25-taobao.markdown
+++ b/_posts/2014-04-25-taobao.markdown
@@ -6,14 +6,14 @@ comments: true
 categories: R
 ---
 
-##起因
+## 起因
 
 刚刚过去的一个月参加了淘宝的数据挖掘比赛，虽然成绩不是很理想也没进入第二轮但是还是有不少收获的，这里总结一下，做个回顾。
 
 <!--more-->
 
 
-##比赛简介
+## 比赛简介
 
 这个大家可以参考淘宝的网页，其实简单来说就是淘宝公开一部分自己的加密后的竞赛数据然后请大家来进行数据挖掘。
 这里简单的回顾下要点：
@@ -24,29 +24,33 @@ categories: R
 >本届赛题的任务就是根据用户4个月在天猫的行为日志，建立用户的品牌偏好，并预测他们在将来一个月内对品牌下商品的购买行为。
 
 
-##总结
+## 总结
 
-###怎么更加好的使用数据挖掘方法
+### 怎么更加好的使用数据挖掘方法
+
 当然，客观的评价这个数据集并不是特别合适，你没有什么简单的方法套用已经存在的数据进行训练。各种数据挖掘技术往往以来训练集的质量和可靠程度，但是对于未来一个月做预测，同时我们不太确定什么样的用户是确定购买的，所以这个竞赛的难度，现在看来就在于怎么样定义一个训练集的准确度。
 
 我采用的这个方法比较简单粗暴：所有购买和进入购物车的的用户认为会继续购买，收藏的用户也会有一个概率购买。其实最后的我检验发现该模型的准确率大概是4.5%左右，所以其实我的准确率就这样被限制住了。当然这个问题也是可以克服的，比如有的同学谈到可以用小样本用户慢慢逼近，因为淘宝开放了检测接口，其实你可以合理提高训练集的质量。当然这个问题是我最后思考得到，已经错过了时间。不过能够得到这个体会还是挺高兴地。
 
-###R语言的思考
+### R语言的思考
+
 虽然plyr这个包被很多人说成是速度很慢的不太理想的解决方案，但是我的体会是这个方法才是触摸到R的灵魂——分割，计算，汇总！所以如果可以的话还是尽量使用plyr的方法吧！
 这里推荐一个好的介绍教程：
 
  [R语言初级课程（4）- 数据汇总plyr包](http://cos.name/videos/r101-plyr/)
 
-###对于提问的思考
+### 对于提问的思考
+
 统计之都是个好地方无论是用户活跃程度还是提问回答的积极度，推荐新手经常进去逛逛或者提问。事实上如果你不去和别人交流很难得到提高。这次的第一点思考还是我在最后几天看比赛
 BBS看到的方法，确实是点出了直接套用数据挖掘算法的致命缺点。
 
-###对于作弊的思考
-我的看法是，其实作弊也是一种能力，只要不被发现其实你作弊什么的也没啥。因为世界上没有不透风的墙最后的结果总归是可以被发现。就像在科学的共同体研究中总是有那么几个造假的，但是不代表我们就不去科研了一样。我们其实也要从中思考某些方法。作弊也是个技术活。基本上所有的坏蛋都是聪明人，你见过智商很低的骗子么？
+### 对于作弊的思考
+
+我的看法是，其实作弊也是一种能力，世界上没有不透风的墙最后的结果总归是可以被发现。就像在科学的共同体研究中总是有那么几个造假的，但是不代表我们就不去科研了一样。我们其实也要从中思考某些方法。作弊也是个技术活。基本上所有的坏蛋都是聪明人，你见过智商很低的骗子么？
 
 
 
-##程序
+## 程序
 
 这里是我们最后参赛的程序，大部分都有注释，大家参考。其实成绩不好，大家不要误会了。
 
