--- a/_posts/2015-04-26-crack3k.markdown
+++ b/_posts/2015-04-26-crack3k.markdown
@@ -6,7 +6,7 @@ comments: true
 categories: GRE
 ---
 
-##起源
+## 起源
 参加了陈琦老师的330club，最大的收获就是一大帮给我巨大帮助的同学。包括很多的帮助，比如YYY在我内外交困的时候给我安慰和鼓励，+0给我宝贵的阿里内推机会，虽然被我搞砸了，但是还是还是感谢。还有大家一起组织的一个微信讨论作文的群互相交流。还有就是那个充满这欢乐和逗比的大的微信群。认识了很多优秀的同学。
 
 当然单单就GRE而言，最大的收获就是得到了默写单词这个背诵GRE单词的大杀器。然后3月份自己编写了一个可以出题目的程序。周五实验定下来就结合上次crystal让我去做讲座后不少同学给出的问题把程序升级了一次。作为这个程序的2.0版本。不过下载量还是挺低的。
@@ -15,9 +15,9 @@ categories: GRE
 
 下面我就写一下为什么我觉得需要使用这个背诵
 
-##为什么要默写单词
+## 为什么要默写单词
 
-###GRE是如何考察单词的
+### GRE是如何考察单词的
 
 首先简单来说默写单词是真正地模拟GRE考试过程。
 
@@ -37,7 +37,7 @@ categories: GRE
 
 但是如果你就是小和尚念经似地看过去，你会发现其实自己的单词背诵地没有那么好。所以你需要更好的方法。
 
-###微臣教你背单词
+### 微臣教你背单词
 
 330club和325班微臣教育采取的方法就是默写——更具体一点就是把需要背诵的单词都写在一张纸上，然后看着英文默写中文，不求多准确或者写出所有的词义，但是一定要强迫自己去记忆。同时不断订正。
 
@@ -50,7 +50,7 @@ categories: GRE
 因为我自己的默写成绩很惨就不单独列出来了。不过我的同桌倒是每次都能够得到接近满分的成绩，非常佩服！
 
 
-###优点
+#### 优点
 
 1. 每一个单词都是强制记忆的——就是不打折扣，必须完全的背诵出来没有任何商量，会就会，不会就不会。
 2. 和考试情景最贴近——考试是没有上下文的，没有顺序、逆序的，完全是混乱出词。但是任何一本单词书本身是有一定顺序的
@@ -59,15 +59,15 @@ categories: GRE
 
 这里插一点个人感受，我觉得默写背单词就是在编程领域非常有名的一本书——learn XXX the hard way。这背后的逻辑其实是the hard way is usually the best way!推荐大家看看learn Python the hard way非常好的一本入门书。
 
-###缺点
+#### 缺点
 
 唯一的缺点就是需要每次生成单词，同时检查的时候需要翻找3k(不过我觉得这个过程挺有帮助的因为增加你和3k的感情)。
 
-###crack3kgrewords
+### crack3kgrewords
 
 所以我就开发了这个默写程序，着重解决这两个缺点。同时在第一版发布后，不断有同学来信询问，我这你总结下同一回复下。同时增加了"完成"对话框指示程序进度和退出按钮。
 
-###效果图
+### 效果图
 
 ![Win7整体效果](/images/crack3k/1.jpg)
 
@@ -76,7 +76,7 @@ categories: GRE
 ![Linux整体效果](/images/crack3k/3.jpg)
 
 
-###crack3kgrewords2.0 下载地址和说明页面
+### crack3kgrewords2.0 下载地址和说明页面
 
 [程序说明github页面](http://iphyer.github.io/Crack3kGREWords/)
 
@@ -88,8 +88,9 @@ categories: GRE
 
 URL : https://pan.baidu.com/s/1pJqRN4n
 
-##回复来信
-###1
+## 回复来信
+
+### 1
 
 >老师： 您好！我用win系统打开3K的默写程序，但是输入数字，点击“RUN”后，并没有txt.格式的文件出现，这是怎么回事呀？只能向您求助了，等待您的回答。
 
@@ -103,12 +104,13 @@ URL : https://pan.baidu.com/s/1pJqRN4n
 4. 这样你就可以用任何你喜欢的编辑器默写中文，对照订正。同时，你既可以使用电子版本默写订正比如利用word，WPS等文字处理软件，也可以分栏之后打印出来，使用纸质版默写订正。
 5. 当然你如果新建一个ChnNew.txt默写中文，在Linux下就可以使用Linux的`diff`命令，自动化检查。Windows用的不多，征求大家建议看有什么好的检查方法。
 
-###2
+### 2
 
 >上次忘了问您一个问题了。
-我有些单词背的时候总觉得很熟了，比如A里边的很多单词，在书上背的时候，怎么都记得。然后换个字体，换个载体，或者做题就感觉特 熟悉，但是就是想不起来什么意思。还有一些单词永远都记不住，记混了，比如a开头的恼怒，加重恶化，好逗的这三个词。
+
+> 我有些单词背的时候总觉得很熟了，比如A里边的很多单词，在书上背的时候，怎么都记得。然后换个字体，换个载体，或者做题就感觉特 熟悉，但是就是想不起来什么意思。还有一些单词永远都记不住，记混了，比如a开头的恼怒，加重恶化，好逗的这三个词。
 我该怎么做呢？
-我用excel默写单词，我默写了100个左右，我先把中文意思隐藏了，然后自己在后边打出来，您帮我看一下。您看我这种默写的方 法没问题吧？中文的意思就是大概意思吧，因为不同词汇书，同一个单词翻译不一样。
+> 我用excel默写单词，我默写了100个左右，我先把中文意思隐藏了，然后自己在后边打出来，您帮我看一下。您看我这种默写的方 法没问题吧？中文的意思就是大概意思吧，因为不同词汇书，同一个单词翻译不一样。
 谢谢您。
 
 第一个问题：
@@ -156,7 +158,7 @@ agrarian=　这个单词你要知道是从acre表示英亩土 地词汇变化过
 
 
 
-##后记
+## 后记
 
 写完这个贴上一个我很认同的价值理念
 
@@ -184,7 +186,7 @@ agrarian=　这个单词你要知道是从acre表示英亩土 地词汇变化过
 
 与大家共勉！
 
-##讲座slides
+## 讲座slides
 最后把上次crystal给一个和她同学分享自己备考体会的slide放上去，给大家参考。程序还是1.0版本的。但是大致内容是不变的。
 
 ![tu0](/images/crack3k/file-0.png)
