--- a/_posts/2019-01-02-Summary2018.markdown
+++ b/_posts/2019-01-02-Summary2018.markdown
@@ -19,4 +19,68 @@ categories: 生活
 
 ## 2018 总结
 
-这里就用流水账来记录吧，不太详细但是适合自己的计划
+这里就用流水账来记录吧，不太详细,也算一个复盘吧。
+
+### 1 月
+
+其实主要是在德州同学家做客，还是好好过了一个寒假。玩得很开心，参见[USA印象6:得克萨斯州——奥斯汀 and 休斯顿游记](https://iphyer.github.io/blog/2018/01/02/austin/)。
+
+### 2 月
+
+上课，同时准备转系。
+
+转系的过程一波三折，好在有惊无险，进入CS。现在看看当时做的 2018 年计划还是很有感触的，[2018年计划](https://iphyer.github.io/blog/2018/01/31/2018/)。
+
+### 3 月
+
+考虑是不是留在本专业还是转入别的专业，最终选择了材料系的老师，开始做一个 Computer Vision 的项目。
+
+### 4 月
+
+口语考试，顺利通过。顺带写了一个总结，[UW-Madison TA Speaking Test 总结](https://iphyer.github.io/blog/2018/01/15/speakingtest/)。
+
+上课，做 CV 项目。
+
+### 5 月
+
+休息了一下，同学邀请去了一趟加州 LA，还是很有收获的，详见 [USA印象7 : 加州 —— 洛杉矶(Los Angeles) and 圣地亚哥(San Diego)游记](https://iphyer.github.io/blog/2018/06/09/lasd/)。
+
+加州确实是好地方。
+
+### 6 月 ，7 月， 8 月 （暑假）
+
+暑假开始，上了算法课，还是很有收获的。感觉算法课是非常有帮助的。算法说白了就是各种解决问题的套路。
+
+同时开始带一帮小本解决计算机视觉的项目，非常累但是非常有收获的一段时间。写了两篇博文总结自己的收获，[工作经验总结](https://iphyer.github.io/blog/2018/08/05/work/) 和 [用矩阵操作快速实现图像识别中 Bounding Box 的准确率和召回率判断](https://iphyer.github.io/blog/2018/04/30/matrix/)。
+
+同时，这个项目还带我去了一趟科罗拉多。在雄伟壮观的 Rocky Mountain 下，好好体会了一把美国西部的壮丽景观，感觉确实是可以去一趟大峡谷 [USA印象8 : 科罗拉多丹佛游记](https://iphyer.github.io/blog/2018/08/22/co/)。
+
+当然也离开了住了两年的家，搬去了一个非常方便的留学生聚居的社区 Sheboygan,说起来这个地方真是整个麦迪逊最值得居住的地方了，公寓价格合理，不是离学校特别远，周围也有 Target, Coops 这样的大型超市。详见 [麦迪逊搬家地址更新总结](https://iphyer.github.io/blog/2018/08/07/address/)。
+
+当然也抽空回国了两周，真的非常开心，国内真是变化迅速，[2018 Summer 回国见闻](https://iphyer.github.io/blog/2018/08/22/china/)。
+
+
+### 9 月
+
+兵荒马乱的一个月，选课，招聘会，去了几个，同时修改了自己的简历，感觉还是很有用的。
+
+首先是参加招聘会体会到了工作的氛围，确实和学术界不一样比较偏向工作。同时发现了刷题的重要性，计算机的工作可以说就是面向刷题的，刷好了题一切都有没有刷好题目万事皆休。
+
+
+### 10 月
+
+陷入了找工作和科研项目的困境，比较迷茫，拔剑四顾心茫然，路在何方。
+
+### 11 月
+
+下定决心，找计算机的 PhD 如果找不到就去找工作，利用计算机的学位去找工作。
+
+主要的问题是没有刷好题。
+
+### 12 月
+
+开始刷题，同时联系教授。
+
+Computer Vision 的研究项目开始收尾。
+
+还有别的几个项目在手头准备结束。
