--- a/_posts/2019-01-05-2019Plan.markdown
+++ b/_posts/2019-01-05-2019Plan.markdown
@@ -18,6 +18,10 @@ categories: 生活
 
 每个月都返回这个帖子更新下，同时反思下进度吧。
 
+## 规律作息
+
+每天早睡早起，同时每天跟踪自己的时间表。确定每天的任务，其实在每天的公交车上就可以参考安排自己的日程表。
+
 ## 健身
 
 失败。
@@ -80,4 +84,8 @@ categories: 生活
 ## 生活
 
 (1) 打算去 大峡谷 或者 黄石公园旅游一趟。
-(2) 汉之广矣，不可泳思；江之永矣，不可方思。
+(2) 买车？ 感觉可以买一辆日系车，主要是代步和买菜。
+(3) 8 月室友会搬出去，那就争取 3 月 ～ 4 月联系认识的同学转租。
+(4) 回国拔智齿
+
+> 汉之广矣，不可泳思；江之永矣，不可方思。
