--- a/_posts/2019-01-05-DuResize.markdown
+++ b/_posts/2019-01-05-DuResize.markdown
@@ -6,9 +6,9 @@ comments: true
 categories: 博客
 ---
 
-# 起因
+今天更新博客，想起来图片还没有压缩格式，所以利用之前的写过的程序 ( [压缩博客图片尺寸](https://iphyer.github.io/blog/2017/05/13/shrinkingimages/) ) 更新博客，但是发现没办法在 Mac 使用。这里记录下更新之后的程序。
 
-今天更新博客，想起来图片还没有压缩格式，所以利用之前的写过的程序 ( [压缩博客图片尺寸](https://iphyer.github.io/blog/2017/05/13/shrinkingimages/) ) 更新博客，但是发现没办法在 Mac 使用。
+# 起因
 
 其实原因也很简单，因为之前的程序主要在 Linux 平台使用，所以我用了 `stat` 命令，但是这不是一个通用的 POSIX 标准程序，参考这个链接修改了一个新的版本 [How can I get the size of a file in a bash script?](https://unix.stackexchange.com/questions/16640/how-can-i-get-the-size-of-a-file-in-a-bash-script)。
 
