--- a/_posts/2019-01-02-Summary2018.markdown
+++ b/_posts/2019-01-02-Summary2018.markdown
@@ -6,16 +6,21 @@ comments: true
 categories: 生活
 ---
 
+因为相信所以看见，而不是因为目之所见而开始行动。
+
+
+<!--more-->
 # 起因
 
 辞旧迎新，这里总结下刚刚过去的 2018， 也梳理下自己的经验教训。 
 
 好多事情不怕难，就怕站。
 
+前事不忘后事之师，又到了年度总结的时候。
+
+好多事情不怕难，就怕站。
+
 作为一个想做事的人，其实很多时候是因为相信所以看见，而不是因为目之所见而开始行动。
-
-<!--more-->
-
 
 ## 2018 总结
 
