--- a/_posts/2019-01-05-2019Plan.markdown
+++ b/_posts/2019-01-05-2019Plan.markdown
@@ -40,6 +40,8 @@ categories: 生活
 
 这个必须要实现，就从今天开始，一天设置一个必须完成的 topic 同时配合书籍进行练习。即使再忙也要开始，心动永远不如行动。
 
+就从 [LeetCode Animation 题目图解汇总](https://mp.weixin.qq.com/s/UnIJiCnKiJ_1cmHuUIF6Pw) 开始吧。顺便给这个 Github 项目做下贡献。
+
 ## 论文
 
 ### Turbine 论文
@@ -101,6 +103,34 @@ V.S.
 暑假需要刷题和刷历年试题。
 
 9 月开始 PhD 资格考试。
+
+## 学习计划
+
+### 网络课程
+
+* [Intro to Deep Learning with PyTorch](https://in.udacity.com/course/deep-learning-pytorch--ud188)
+* [practicalAI](https://github.com/GokuMohandas/practicalAI)
+* [Introductory lessons to Deep Learning for medical imaging by MD.ai](https://github.com/mdai/ml-lessons)
+* [Advanced Deep Learning & Reinforcement Learning By DeepMind](https://www.youtube.com/playlist?list=PLqYmG7hTraZDNJre23vqCGIVpfZ_K2RZs)
+* [Intro To Dynamic Programming - Coding Interview Preparation](https://www.udemy.com/dynamic-programming/?ranMID=39197&ranEAID=JVFxdTr9V80&ranSiteID=JVFxdTr9V80-Ni0bqLdNtNB_oqSKp9NP9g&siteID=JVFxdTr9V80-Ni0bqLdNtNB_oqSKp9NP9g&LSNPUBID=JVFxdTr9V80)
+* [system-design-primer](https://github.com/donnemartin/system-design-primer)
+
+### 书籍
+
+* Python+深度学习.pdf
+* (Statistics and Computing) Thomas Haslwanter (auth.)-An Introduction to Statistics with Python_ With Applications in the Life Sciences-Springer International Publishing (2016).pdf
+* 9781784399689-PRACTICAL_MACHINE_LEARNING.pdf
+* 9781785881114-PYTHON_MICROSERVICES_DEVELOPMENT.pdf
+* 9781786463708-LEARNING_PYSPARK.pdf
+* 9781786464453-PYTHON_DEEP_LEARNING.pdf
+* 9781786466587-BUILDING_MACHINE_LEARNING_PROJECTS_WITH_TENSORFLOW.pdf
+* 9781786467355-PYTHON_DATA_STRUCTURES_AND_ALGORITHMS.pdf
+* 9781786469786-DEEP_LEARNING_WITH_TENSORFLOW.pdf
+* 9781787128422-DEEP_LEARNING_WITH_KERAS.pdf
+* Python设计模式2ndEdition.pdf
+* Python面向对象编程指南.pdf
+* Sandro Skansi-Introduction to Deep Learning. From Logical Calculus to Artificial Intelligence-Springer (2018).pdf
+* 代码整洁之道.pdf
 
 ## 生活
 
