--- a/_posts/2019-01-05-2019Plan.markdown
+++ b/_posts/2019-01-05-2019Plan.markdown
@@ -112,25 +112,38 @@ V.S.
 * [practicalAI](https://github.com/GokuMohandas/practicalAI)
 * [Introductory lessons to Deep Learning for medical imaging by MD.ai](https://github.com/mdai/ml-lessons)
 * [Advanced Deep Learning & Reinforcement Learning By DeepMind](https://www.youtube.com/playlist?list=PLqYmG7hTraZDNJre23vqCGIVpfZ_K2RZs)
-* [Intro To Dynamic Programming - Coding Interview Preparation](https://www.udemy.com/dynamic-programming/?ranMID=39197&ranEAID=JVFxdTr9V80&ranSiteID=JVFxdTr9V80-Ni0bqLdNtNB_oqSKp9NP9g&siteID=JVFxdTr9V80-Ni0bqLdNtNB_oqSKp9NP9g&LSNPUBID=JVFxdTr9V80)
+* [深度学习面试题目汇总](https://github.com/ShanghaiTechAIClub/DLInterview)
+* [The Web Developer Bootcamp](https://www.udemy.com/the-web-developer-bootcamp/?siteID=skg_Sko_Ybo-icN1VNsPpbLc_8Bni1jLKw&LSNPUBID=skg%2FSko%2FYbo)
+
 * [system-design-primer](https://github.com/donnemartin/system-design-primer)
+* [秒杀系统设计与实现.互联网工程师进阶与分析](https://github.com/qiurunze123/miaosha)
+争取寒假解决上面部分。
 
 ### 书籍
 
+* An Introduction to Statistics with Python With Applications in the Life Sciences.pdf
+* BUILDING_MACHINE_LEARNING_PROJECTS_WITH_TENSORFLOW.pdf
+* DEEP_LEARNING_WITH_KERAS.pdf
+* DEEP_LEARNING_WITH_TENSORFLOW.pdf
+* LEARNING_PYSPARK.pdf
+* PRACTICAL_MACHINE_LEARNING.pdf
+* PYTHON_DATA_STRUCTURES_AND_ALGORITHMS.pdf
+* PYTHON_DEEP_LEARNING.pdf
+* PYTHON_MICROSERVICES_DEVELOPMENT.pdf
 * Python+深度学习.pdf
-* (Statistics and Computing) Thomas Haslwanter (auth.)-An Introduction to Statistics with Python_ With Applications in the Life Sciences-Springer International Publishing (2016).pdf
-* 9781784399689-PRACTICAL_MACHINE_LEARNING.pdf
-* 9781785881114-PYTHON_MICROSERVICES_DEVELOPMENT.pdf
-* 9781786463708-LEARNING_PYSPARK.pdf
-* 9781786464453-PYTHON_DEEP_LEARNING.pdf
-* 9781786466587-BUILDING_MACHINE_LEARNING_PROJECTS_WITH_TENSORFLOW.pdf
-* 9781786467355-PYTHON_DATA_STRUCTURES_AND_ALGORITHMS.pdf
-* 9781786469786-DEEP_LEARNING_WITH_TENSORFLOW.pdf
-* 9781787128422-DEEP_LEARNING_WITH_KERAS.pdf
 * Python设计模式2ndEdition.pdf
 * Python面向对象编程指南.pdf
-* Sandro Skansi-Introduction to Deep Learning. From Logical Calculus to Artificial Intelligence-Springer (2018).pdf
 * 代码整洁之道.pdf
+
+E-book
+* Deep Learning for Computer Vision
+* Learning OpenCV
+* Hands-On Transfer Learning with Python
+* Hands On GPU Accelerated Computer Vision with OpenCV and CUDA
+
+
+Excerpt From: Dipanjan Sarkar. “Hands-On Transfer Learning with Python.” Apple Books. 
+* designing data-intensive applications
 
 ## 生活
 
