--- a/_posts/2019-03-20-Dallas.md
+++ b/_posts/2019-03-20-Dallas.md
@@ -12,6 +12,8 @@ categories: 美国生活
 
 这个游记就是作为一个记录吧。
 
+<!--more-->
+
 ## 地理
 
 达拉斯是德克萨斯州第三大城市（第一是休斯敦，第二是圣安东尼奥），美国第九大城市，达拉斯与沃斯堡、阿灵顿组成达拉斯-沃斯堡-阿灵顿城市群，覆盖12个县，总人口615万人（2007年数据），是美国第四大城市群。
