--- a/_posts/2019-07-21-UWCS.md
+++ b/_posts/2019-07-21-UWCS.md
@@ -20,3 +20,14 @@ categories: USA
 
 首先，计算机虽然复杂，但是这个专业最厉害的人总是在简化复杂度。所以我最大的感受就是计算机的知识总是可以掌握和物理系的体会完全不同。物理系才是反人类的设计，最厉害的那批人不断在提高复杂度而且完全不关心大家是不是能理解。当然也没有那么多人需要学习物理就是了。
 
+这里我放几个老版本的 UW-Madison 的计算机学习方案，可以看出，其实除了基本的编程语言和数据结构，剩下的最重要的 CS 专业核心课，其实就是 3 门 5 开头的课，一般推荐的就是 
+
+* 537. Operating System
+* 564. Data Base
+* 577. Introduction to Algorithm
+
+其中算法也是可以通过 Leetcode 积极练习的。
+
+其中最重要的就是 OS，OS 是 UW-Madison 的看家课程。当然最重要的是教科书也特别好, Remzi 的 [Operating Systems: Three Easy Pieces](http://pages.cs.wisc.edu/~remzi/OSTEP/) 就是 537 的课程总结形成的教科书。所以其实还是可以自己学习的。
+
+如果只是为了找工作，其实只需要刷 Leetcode 就可以了。当然这些课程也是给大家在 UW-Madison 学习的时候的参考选课。
