--- a/_posts/2019-05-05-FastAI.md
+++ b/_posts/2019-05-05-FastAI.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Fast.ai 如何设置带标签的测试集 Test data set"
+title: "Fast.ai 如何设置带标签的测试集 Test Data Set"
 date: 2019-05-05 23:21
 comments: true
 categories: Deep Learning
@@ -19,15 +19,18 @@ categories: Deep Learning
 > In the fastai framework test datasets have no labels - this is the unknown data to be predicted. If you want to validate your model on a test dataset with labels, you probably need to use it as a validation set, as in:
 
 ```python3
+
 data_test = (ImageList.from_folder(path)
         .split_by_folder(train='train', valid='test')
         .label_from_folder()
         ...)
+
 ```
 
 > Another approach, where you do use a normal validation set, and then when the training is over, you just want to validate the test set w/ labels as a validation set, you can do this:
 
 ```python3
+
 tfms = []
 path = Path('data').resolve()
 data = (ImageList.from_folder(path)
@@ -50,6 +53,7 @@ data_test = (ImageList.from_folder(path)
         .normalize()
        ) 
 learn.validate(data_test.valid_dl)
+
 ```
 
 > Of course, your data block can be totally different, this is just an example.
