--- a/_posts/2019-05-05-FastAI.md
+++ b/_posts/2019-05-05-FastAI.md
@@ -10,6 +10,8 @@ categories: Deep Learning
 
 [fast.ai](https://www.fast.ai/) 是一个加州的创业公司，口号是  Making neural nets uncool again 。他们提供了一个针对深度学习的高级的调用接口。 通过调用 fast.ai 的程序，可以很方便的实现对于程序的设计和利用。这是非常好的。
 
+<!--more-->
+
 ### 如何设置 Test  数据集
 
 我发现 fast.ai 的设计中的一个偏好，就是他们不设置 test data 而是只使用 validation data set 作为 CV 的测试。 这个当然没有问题，因为计算机视觉的项目在针对特别大的数据集时，都是默认将 Validation 集作为测试集的。但是对于很多的科研项目，因为你的数据量并不是特别多，所以很多时候你需要将 Validation 集和 Test 集分别开。
@@ -18,7 +20,7 @@ categories: Deep Learning
 
 > In the fastai framework test datasets have no labels - this is the unknown data to be predicted. If you want to validate your model on a test dataset with labels, you probably need to use it as a validation set, as in:
 
-```python3
+```python
 
 data_test = (ImageList.from_folder(path)
         .split_by_folder(train='train', valid='test')
@@ -29,7 +31,7 @@ data_test = (ImageList.from_folder(path)
 
 > Another approach, where you do use a normal validation set, and then when the training is over, you just want to validate the test set w/ labels as a validation set, you can do this:
 
-```python3
+```python
 
 tfms = []
 path = Path('data').resolve()
