--- a/_posts/2019-07-21-UWCS.md
+++ b/_posts/2019-07-21-UWCS.md
@@ -14,6 +14,8 @@ categories: USA
 
 这里记录自己学习 CS 的经历，我主要点评自己学习的课程，选择下自己感觉合适的课程。
 
+<!--more-->
+
 ## 本科课程
 
 因为自己转专业的经历，很多人和我讨论过计算机本科课程的问题，其实这个问题我往往觉得不是特别重要。
