--- a/_posts/2019-07-21-UWCS.md
+++ b/_posts/2019-07-21-UWCS.md
@@ -24,7 +24,12 @@ categories: USA
 
 这里我放几个老版本的 UW-Madison 的计算机学习方案.
 
-![coursePlanForm fall 2016](/images/uwm_CS/coursePlanForm fall 2016)
+![CS_sample_plans](/images/uwm_CS/CS_sample_plans.jpg)
+
+![coursePlanForm fall 2016](/images/uwm_CS/coursePlanForm.jpg)
+
+![CS Major Diagram_March 2016](/images/uwm_CS/CSMajorDiagram.jpg)
+
 
 
 可以看出，其实除了基本的编程语言和数据结构，剩下的最重要的 CS 专业核心课，其实就是 3 门 5 开头的课，一般推荐的就是 
