--- a/_posts/2019-07-21-UWCS.md
+++ b/_posts/2019-07-21-UWCS.md
@@ -30,13 +30,18 @@ categories: USA
 
 ![CS Major Diagram_March 2016](/images/uwm_CS/CSMajorDiagram.jpg)
 
+![CS sample plans for 4 years](/images/uwm_CS/Sample-CS-major-4-year-plan.jpg)
+
+可以看出，虽然很多人是学习了 4 年的计算机，但是却花了很多时间在一些别的课程上。我从来不是说这些课程不重要，但是相对于而言，这些课程并不是直接和 CS 相关，即使你是一个转专业的学生，很多时候这些课程你也有修习。所以战略上并不应该因为自己不是本科 CS 而感到害怕。
+
+同时以很多人本科的学习态度，其实他们的水平并不一定特别高，当然这里还是要承认大神的存在。当然到了研究生阶段，学习更加专注，结果和水平也会突飞猛进。所以很多人往往会需要一个硕士学位作为正式求职的帮助。
 
 
-可以看出，其实除了基本的编程语言和数据结构，剩下的最重要的 CS 专业核心课，其实就是 3 门 5 开头的课，一般推荐的就是 
+其实除了基本的编程语言和数据结构，剩下的最重要的 CS 专业核心课，其实就是 3 门 5 开头的课，一般推荐的就是 
 
-* 537 Operating System
-* 564 Data Base
-* 577 Introduction to Algorithm
+* 537-Operating System
+* 564-Data Base
+* 577-Introduction to Algorithm
 
 其中算法也是可以通过 Leetcode 积极练习的。
 
