--- a/_posts/2019-07-21-UWCS.md
+++ b/_posts/2019-07-21-UWCS.md
@@ -8,7 +8,7 @@ categories: USA
 
 ## 前言
 
-终于从 CS 系顺利硕士毕业了，会想起 17 年的暑假，当前老板告诉我他要跳槽的时候到现在，感觉时间真是飞快。
+终于从 CS 系顺利硕士毕业了, 回想起 17 年的暑假，当前老板告诉我他要跳槽的时候到现在，感觉时间真是飞快。
 
 > 流光容易把人抛，红了樱桃，绿了芭蕉。
 
@@ -26,11 +26,14 @@ categories: USA
 
 ![CS_sample_plans](/images/uwm_CS/CS_sample_plans.jpg)
 
-![coursePlanForm fall 2016](/images/uwm_CS/coursePlanForm.jpg)
-
 ![CS Major Diagram_March 2016](/images/uwm_CS/CSMajorDiagram.jpg)
 
 ![CS sample plans for 4 years](/images/uwm_CS/Sample-CS-major-4-year-plan.jpg)
+
+
+如果有还是本科的小朋友，也可以对照下面的图自己设计下自己的课程
+
+![coursePlanForm fall 2016](/images/uwm_CS/coursePlanForm.jpg)
 
 可以看出，虽然很多人是学习了 4 年的计算机，但是却花了很多时间在一些别的课程上。我从来不是说这些课程不重要，但是相对于而言，这些课程并不是直接和 CS 相关，即使你是一个转专业的学生，很多时候这些课程你也有修习。所以战略上并不应该因为自己不是本科 CS 而感到害怕。
 
