--- a/_posts/2019-09-07-Time.md
+++ b/_posts/2019-09-07-Time.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "分清主次 保护时间"
+title: "分清主次 保护时间 说到做到"
 date: 2019-09-07 01:44
 comments: true
 categories: 生活
@@ -14,6 +14,50 @@ categories: 生活
 
 ## 分清主次
 
+说起来，人生就是一道道选择题，取决于你如何选择。
+
+如何选择就需要标准。
+
+你选择什么作为自己最重要的部分？
+
+同一个时间，各种事情，各个问题，各种情况，谁先谁后？
+
+所以你必须心中知道各个事情的优先级。
+
 ## 保护时间
 
+优先级高的事情，不能够被打断。
+
+你必须保护自己的时间，说是集中在某件事情上就是集中在某件事情上。
+
+对你重要的事情，不能被打断，不能被降级，不能被减少。
+
+## Say No
+
+如果还是有被打扰的情况怎么办？
+
+Say No!~
+
+Say No!~
+
+Say No!~
+
 ## 说到做到
+
+其实计划列了好多，很多都没做到，看起来往往也是很沮丧。
+
+比如 
+
+* 体重
+* Leetcode
+* 复习
+
+原因是什么？
+
+说到做到啊，很多事情，你说要做到，那就做到。
+
+只要能想到办法就不要找接口, No Excuse!
+
+你没办到就是不睡觉也要解决，不解决老实认怂，接着想办法再干！~
+
+不能放弃，不能退让，对自己就要狠一点！
