--- a/_posts/2015-04-26-crack3k.markdown
+++ b/_posts/2015-04-26-crack3k.markdown
@@ -82,7 +82,11 @@ categories: GRE
 
 页面上的下载链接处就有。
 
-###百度云下载地址
+#### Github 下载链接
+
+[Github 下载](/upload/files/Crack3K.zip)
+
+#### 百度云下载地址
 
 [百度云下载链接](https://pan.baidu.com/s/1pJqRN4n)
 
