--- a/_posts/2019-09-07-MN.md
+++ b/_posts/2019-09-07-MN.md
@@ -29,7 +29,9 @@ categories: USA
 
 ## Minnehaha
 
-这其实是一个城市公园，但是景色确实不错，the Minnehaha Fall 比较有特色。当地人很喜欢去，即使我们去的当天早上刚刚下过雨，依然逛公园的人很多，里面游人如织。
+Minnehaha 的景色非常不错，小而精。
+
+当地人很喜欢去，即使我们去的当天早上刚刚下过雨，依然逛公园的人很多，里面游人如织。
 
 ![Minnehaha](/images/MN/Minnehaha.JPG)
 
