--- a/_posts/2020-01-09-summary2019plan2020.md
+++ b/_posts/2020-01-09-summary2019plan2020.md
@@ -10,9 +10,13 @@ categories: 美国生活
 
 这个寒假回国很忙,估计可能在我完整写完这篇的时候已经是回到美国了。这里先写下部分，别的都先不说了，还是刷题，写文章最重要。
 
-ConclusionFirst slide with conclusion / summary first / primrid of / starting with the banglineReview of the project / compete the loop / have something to show peopleDone the whole thing / of course there are things to do / next project learning
+ConclusionFirst slide with conclusion / summary first / primrid of / starting with the bangline Review of the project / compete the loop / have something to show peopleDone the whole thing / of course there are things to do / next project learning
 
+Stop complaining and keep working together
 
+Take responsibility 
+
+Emailing your questions and collect responses
 
 not be caught in
 
