--- a/_posts/2020-01-09-summary2019plan2020.md
+++ b/_posts/2020-01-09-summary2019plan2020.md
@@ -25,6 +25,22 @@ have a good stroy to tell where you are
 orgnize the projecgt
 
 
+### Slide
+
+* For each slide, think before present it.
+* Show conclusion
+* show problems and how to solve
+* At lease what you are planning to do to solve it, then the question goes to whether the solution is reasonable or not. How ot improve it. This is much more important!
+* DO NOT ONLY PRESENT the problem but do not solve it or propose how to solve it.
+
+
+## Reading Paper
+
+* Whenever read a paper, prepare a slide to summarize it
+* Track and easy to trace and share to others
+
+
+
 
 
 
