Format adjusting and complete

--- a/_posts/2020-01-09-summary2019plan2020.md
+++ b/_posts/2020-01-09-summary2019plan2020.md
@@ -10,34 +10,12 @@ categories: 美国生活
 
 这个寒假回国很忙,估计可能在我完整写完这篇的时候已经是回到美国了。这里先写下部分，别的都先不说了，还是刷题，写文章最重要。
 
-ConclusionFirst slide with conclusion / summary first / primrid of / starting with the bangline Review of the project / compete the loop / have something to show peopleDone the whole thing / of course there are things to do / next project learning
-
-Stop complaining and keep working together
-
-Take responsibility 
-
-Emailing your questions and collect responses
-
-not be caught in
-
-have a good stroy to tell where you are
-
-orgnize the projecgt
 
 
-### Slide
-
-* For each slide, think before present it.
-* Show conclusion
-* show problems and how to solve
-* At lease what you are planning to do to solve it, then the question goes to whether the solution is reasonable or not. How ot improve it. This is much more important!
-* DO NOT ONLY PRESENT the problem but do not solve it or propose how to solve it.
+<!--more-->
 
 
-## Reading Paper
 
-* Whenever read a paper, prepare a slide to summarize it
-* Track and easy to trace and share to others
 
 
 
