--- a/_posts/2020-01-09-summary2019plan2020.md
+++ b/_posts/2020-01-09-summary2019plan2020.md
@@ -22,86 +22,49 @@ categories: 美国生活
 
 这个比较重要，所以放在开头。
 
-### CS Master 
+### CS Master == > Done
 
-已经提交申请，今年暑假毕业。
+~~已经提交申请，今年暑假毕业。~~
 
-### MSE PhD
+### MSE PhD ==> 2020 June Prelim
 
-定下一个方向，既然想要 PhD 就不需要犹豫，不然没有目标，任何方向都是逆风。
+~~争取明年春 qualify ~~ Done 2019.09.27
 
-想起之前发的一条微博，
-
-> 公不远数千里，深入寇境，长安咫尺而不渡灞水，百姓未见公心故也，所以不至。 ​​​​
-
-真是至理名言，直捣黄龙府，解放全中国，宜将剩勇追穷寇。
-
-The Die Is Cast！Crossing the Rubicon！
-
-抓紧时间结束在 UW 的任务，开启 Argone 的任务。
-
-争取明年春 qualify 然后开始毕业论文写作过程。
+然后开始毕业论文写作过
 
 ## 进度
 
-### 减肥
+### 减肥 == > 2020 Continue, 160 lbs
 
-感觉失败了。
+### 健身 == >Jogging 
 
-### 健身
+### Leetcode == > 3~5 Questions Everyday And at the end of May goes to 200  
 
-最近需要调整下，不能老是和基友们一起去玩耍了。
+2020.05.04 : 115/1439 Solved - Easy 73 Medium 39 Hard 3
 
-### Leetcode
-
-只做了 18 题。
-
-还要继续坚持每天一道题目应该是必须的。
+~~只做了 18 题。还要继续坚持每天一道题目应该是必须的。~~
 
 ### 论文
 
-说起来，3 月份意外得到一个 Paper 来自之前的老同学的帮助。但是还是不能只靠这个，需要自己的努力得到更多的论文。
+#### Turbine == > Published 2019/9/25
 
-#### Turbine 
+#### Faster R-CNN == > Under Review Waiting for Updates from Ryan
 
-审稿意见回来了，这周回复给杨老师，改动下单位到 MSE。
+#### YOLO  == > Writing 2020.05.15
 
-#### Faster R-CNN
+#### Medical Image == > Using MXNet to finish all 3 models and using BBox Voting to solve it.
 
-(1) 解决 Watershed Problem
+#### Mask R-CNN == > Still experimenting
 
-(2) 写作
-
-#### YOLO 
-
-(1) 完成了全部的计算任务，进入写作阶段。
-
-#### Medical Image
-
-快速结题。
-
-#### Mask R-CNN
-
-Somehow， 这个 Project 暂时先停下，集中精力在论文写作上，伤敌十指不如断敌一指。
-
-#### Submarine
-
-这个目前需要及时和 CS 老板联系，争取在一周内把自己的部分做完然后结束 CS 部分。
+~~#### Submarine  ==> Stops as not suited for Ph.D. in MSE~~
 
 ## 生活
 
-在 5 月之前买车，感觉这个夏天可能需要芝加哥，麦迪逊两头跑。
+### 2019.05.31 Buying CRV
 
-练习新室友，室友已经得到了新的 offer 会离开麦迪逊。
-
-
-
-
+### NR 2020.04
 
 
 <!--more-->
 
-
-
-![Michigan Map](/images/NorthMichigan/NorthMichigan.png)
 
