--- a/_posts/2020-01-09-summary2019plan2020.md
+++ b/_posts/2020-01-09-summary2019plan2020.md
@@ -12,7 +12,7 @@ categories: 美国生活
 
 <!--more-->
 
-## 2019 Summary
+# 2019 Summary
 
 对照时间总结计划总是让人比较难过的经历，特别是如果这一年还是有很多遗憾的事情的时候。当然如果不总结也是不会提高自己的。还是总结好！
 
@@ -48,14 +48,6 @@ categories: 美国生活
 
 #### Turbine == > Published 2019/9/25
 
-#### Faster R-CNN == > Under Review Waiting for Updates from Ryan
-
-#### YOLO  == > Writing 2020.05.15
-
-#### Medical Image == > Using MXNet to finish all 3 models and using BBox Voting to solve it.
-
-#### Mask R-CNN == > Still experimenting
-
 ~~#### Submarine  ==> Stops as not suited for Ph.D. in MSE~~
 
 ## 生活
@@ -63,6 +55,28 @@ categories: 美国生活
 ### 2019.05.31 Buying CRV
 
 ### NR 2020.04
+
+# 2020 Plan
+
+其实 2020 Plan 很简单，
+
+## Preliminary Exam 2020.06.10
+
+## Paper Publishing
+
+#### Faster R-CNN == > Under Review Waiting for Updates from Ryan 
+
+#### YOLO  == > Writing 2020.05.15
+
+#### Medical Image == > Using MXNet to finish all 3 models and using BBox Voting to solve it.
+
+#### Mask R-CNN == > Still experimenting
+
+## Leetcode == > 500
+
+## Internship 
+
+Starts looking for internship at August
 
 
 <!--more-->
