2020 new overall plan1

--- a/_posts/2020-01-09-summary2019plan2020.md
+++ b/_posts/2020-01-09-summary2019plan2020.md
@@ -18,8 +18,6 @@ categories: 美国生活
 
 我直接把 2019 一季度总结拷贝过来总结吧。哈哈哈，每次到了这个时候都是迷之尴尬，因为发现自己又是很多事情没做到。
 
-<!--more-->
-
 ## 学业
 
 这个比较重要，所以放在开头。
@@ -30,7 +28,9 @@ categories: 美国生活
 
 ### MSE PhD ==> 2020 June Prelim
 
-~~争取明年春 qualify ~~ Done 2019.09.27
+~~争取明年春 qualify~~
+
+2019.09.27
 
 然后开始毕业论文写作过
 
