2020 new overall plan4

--- a/_posts/2020-01-09-summary2019plan2020.md
+++ b/_posts/2020-01-09-summary2019plan2020.md
@@ -36,11 +36,7 @@ categories: 美国生活
 
 ## 进度
 
-### 减肥 == > 2020 Continue, 160 lbs
-
-### 健身 == >Jogging 
-
-### Leetcode == > 3~5 Questions Everyday And at the end of May goes to 200  
+减肥失败，健身失败。 解决这些问题，自觉主动地解决问题。
 
 2020.05.04 : 115/1439 Solved - Easy 73 Medium 39 Hard 3
 
@@ -49,8 +45,6 @@ categories: 美国生活
 ### 论文
 
 #### Turbine == > Published 2019/9/25
-
-~~#### Submarine  ==> Stops as not suited for Ph.D. in MSE~~
 
 ## 生活
 
@@ -79,5 +73,11 @@ categories: 美国生活
 ## Internship 
 
 Starts looking for internship at August
+
+## 减肥 == > 2020 Continue, 160 lbs
+
+## 健身 == > Jogging 
+
+### Leetcode == > 3~5 Questions Everyday And at the end of May goes to 200  
 
 
