correct weixin blog

--- a/_posts/2017-09-10-week1ta.markdown
+++ b/_posts/2017-09-10-week1ta.markdown
@@ -35,7 +35,7 @@ categories: 学习
 
 第一个感受是累。
 
-这一周，基本上我从周二到周四都是比较忙得，特别是周二，周四。周二，周四早上6点起来，简单吃个早饭，7点出发去学校，因为我是7:45第一节课。当然你要早点去准备各种材料。这样到了7:45,开始上课，50分钟。作为一个非母语助教你还不得不提高警惕，集中精神。然后15分钟转场，就是第二节课。第一节课结束还有小本来问各种问题，不得不尽快解决容易解决的。不能快速说清楚的就让他们发邮件。然后第二节课又是50分钟。之后，有个50分钟休息，我会去买午饭。因为11点到2点就是整整3个小时的实验时间，这3个小时你不得不在实验室不停的关注小本。因为化学实验，虽然一开始比较安全但是到了后面还是会用到酸碱等等。结束了，2:20又会有其他课程等等。等这一天忙完了还要给小本们改作业加实验报告。
+这一周，基本上我从周二到周四都是比较忙的，特别是周二，周四。周二，周四早上6点起来，简单吃个早饭，7点出发去学校，因为我是7:45第一节课。当然你要早点去准备各种材料。这样到了7:45,开始上课，50分钟。作为一个非母语助教你还不得不提高警惕，集中精神。然后15分钟转场，就是第二节课。第一节课结束还有小本来问各种问题，不得不尽快解决容易解决的。不能快速说清楚的就让他们发邮件。然后第二节课又是50分钟。之后，有个50分钟休息，我会去买午饭。因为11点到2点就是整整3个小时的实验时间，这3个小时你不得不在实验室不停的关注小本。因为化学实验，虽然一开始比较安全但是到了后面还是会用到酸碱等等。结束了，2:20又会有其他课程等等。等这一天忙完了还要给小本们改作业加实验报告。
 
 当然周三还有两个小时的Help Desk时间。就是我需要在助教办公室坐班，然后有问题的小本会来问问题，基本上这个时候就是遭遇战。因为和讨论课不同，讨论课我设定议程，这个时候是小本来问问题。很多时候都是很累的。因为来问问题的小本往往会有些基础不好或者概念不清，你就需要从头讲起。不过美国你人有个好处，懂就是懂，不懂就说不懂。这样至少知道怎么帮助他们。
 
