--- a/_posts/2017-06-21-phd.markdown
+++ b/_posts/2017-06-21-phd.markdown
@@ -18,7 +18,7 @@ categories: 学习
 
 # 讨论原则
 
-这个问题为什么值得单独列出一章来，是因为我发现在国内的洗脑教育下，即使是受过一定高等教育的人往往也没办法树立正确讨论问题的框架。
+这个问题为什么值得单独列出一章来，是因为我发现在中国现行教育学科分类下，即使是受过一定高等教育的人往往也没办法树立正确讨论问题的框架。我们缺少了逻辑思维这个部分，比如有讲到逻辑的语文学科中举例子居然是论证的一种方法。。。
 
 > 在评价一个事物好坏的时候，必须用统计的思维而不是个例的介绍。如果你准备挑战统计规律请确保自己有独特的本领。
 
@@ -26,13 +26,13 @@ categories: 学习
 
 > 我有一个同事的表哥的儿子XXX，在美国YYY学校求学,然后干ZZZ，现在挺好的。
 
-这是国内惯用的洗脑手段，比如向XX学习等等。
+这是常见的讨论例子，但是这个是完完全全错误而且误人子弟的论证方式。
 
-首先他能做，不代表你能做，比如他有某种特殊的条件，你不具备。比如他的学校允许修第二专业，你的学校不允许。其次，即使他过去能做，不代表你现在也能做，比如30年前，汽车工程师是非常好的工业，现在请看看底特律，已经是全美最危险的城市了。最后说一个，他成功了，能保证你成功吗?事实是任何人不能保证，我们只能这么讨论问题 : 我不能保证你个人尝试的最终结果，但是从统计上看，你有90%的概率成功。如果承认统计的观点，那么这个举个例就是彻头彻尾的自我欺骗，参考国内搞了几十年的学习先进典型。
+首先他能做，不代表你能做，比如他有某种特殊的条件，你不具备。比如他的学校允许修第二专业，你的学校不允许。其次，即使他过去能做，不代表你现在也能做，比如30年前，汽车工程师是非常好的工业，现在请看看底特律，已经是全美最危险的城市了。最后说一个，他成功了，能保证你成功吗?事实是任何人不能保证，我们只能这么讨论问题 : 我不能保证你个人尝试的最终结果，但是从统计上看，你有90%的概率成功。如果你承认统计的观点，那么举个例就是彻头彻尾的自我欺骗，参考国搞了几十年的学习先进典型，几个人能做到先进典型的事迹？
 
 之前我以为这个就是普通国人的思维缺陷，但是现在发现连在国外受过高等教育的大教授也会陷入这种缺点不能自拔，参看这篇 [北大教授饶毅：我为什么不建议中国学生上美国顶尖大学?](https://mp.weixin.qq.com/s/PysuIURHvn720igN1BqTnA)。通篇的思路就是，“我有一个XXX，然后论证下自己观点”，我很好奇，这是揣着明白装糊涂吧。饶毅试试这么发表论文看看审稿人怎么喷他。
 
-一句话——抛开统计谈问题都是耍流氓!　要么是真的傻，就怕是别有用心装糊涂。
+> 一句话——抛开统计谈问题都是耍流氓!　要么是真的傻，就怕是别有用心装糊涂。
 
 # 学术路的现状
 
@@ -48,11 +48,13 @@ categories: 学习
 
 ## 供求关系
 
-其实任何行业的前景，都是由供求关系决定的。
+其实任何行业的就业，都是由供求关系决定的。
 
-现在基础学科的现状就是，对于新教授的需求基本稳定，现在成为基础学科的教授，可以说都是杀出一条血路。从概率上说，只有 5%　的新入学 PhD　会成为教授。同时这个数据还要再乘上一个学校系数，好学校概率更大，以政治学教授为例　[SUPERPOWERS: THE AMERICAN ACADEMIC ELITE](http://gppreview.com/2012/12/03/superpowers-the-american-academic-elite/)。
+现在基础学科的现状就是，对于新教授的需求基本稳定且远远小于毕业生人数。
 
-至于 5%　这个概率是我从身边的经历和下面这篇报道种得到的，看生命科学和自然科学那部分，到了2011 年只有 10%，还要注意的是，这个统计是刚刚毕业的时候的数据，再算上晋升过程中的折损，这个概率其实还是挺高的，比如博士后做到一半不做了，或者续不上合同回国了(身边的例子)，最后 5%　真的还算多了。
+现在成为基础学科的教授，可以说都是杀出一条血路。从概率上说，只有 5% 的新入学 PhD　会成为教授。同时这个数据还要再乘上一个学校系数，好学校概率更大，以政治学教授为例　[SUPERPOWERS: THE AMERICAN ACADEMIC ELITE](http://gppreview.com/2012/12/03/superpowers-the-american-academic-elite/)。
+
+至于 5% 这个概率是我从身边的经历和下面这篇报道中得到的，看生命科学和自然科学那部分，到了2011 年只有 10%，还要注意的是，这个统计是刚刚毕业的时候的数据，再算上晋升过程中的折损，这个概率其实还是挺高的，比如博士后做到一半不做了，或者续不上合同回国了(身边的例子)，最后 5% 真的还算多了。
 
 ![走上教职百分比](/images/PHD/percent.png)
 
@@ -61,7 +63,7 @@ categories: 学习
 
 亲身听到的数据，当放出一个教职的时候，会有 400 个申请者，最后挑 10 个人来面试，最后发一个 offer。那剩下的那些人呢？他们的就业怎么办？那就再来一个博后吧，大不了再去下一个城市。
 
-全美的现状就是这个，还需要考虑到再你读 PhD　毕业的过程中，更多的人成为了博后，做了千老。要知道一旦成为老千，基本上都是拖家带口，苟延残喘，很少有勇气改变，当然也是因为机会成本太大。
+全美的现状就是这个，还需要考虑到在你读 PhD 的过程中，更多的人成为了博后，做了千老。要知道一旦成为老千，基本上都是拖家带口，苟延残喘，很少有勇气改变，当然也是因为机会成本太大。
 
 ## 工作待遇
 
@@ -69,25 +71,25 @@ categories: 学习
 
 这方面的一个例子就是别听某些教授说话，比如清华某著名生物教授的无耻谰言，生物的就业很稳定——是啊，根本就没有就业当然稳定。
 
-那么听什么，其实看看 Science，Nature 的报道就可以知道了。Science，Nature　其实也可以说是利益相关了，但是还是很多劝退的声音传出来，为什么？　很简单，情况太严重了，有点良心的都不敢骗人了。
+那么听什么，其实看看 Science，Nature 的报道就可以知道了。Science，Nature　其实也可以说是利益相关了，但是还是很多劝退的声音传出来，为什么? 很简单，情况太严重了，有点良心的都不敢骗人了。
 
 这里转两篇中文的，[Nature：博士后的困境，漫漫福利路在何方？](http://www.cn-healthcare.com/article/20150918/content-478045.html), [Science：做博士后的代价](http://m.biodiscover.com/news/research/652743.html)。
 
 当然，我们还是要看统计，看数据，[美国博士后：工作和薪酬](http://www.sohu.com/a/125225378_464038)，最最触目惊心的就是，学术工作的残酷现实。
 
-当然你要是非要说，学术工作不是为了钱，这个思想很好啊，适合学术，少年加油！
+当然你要是非要说，学术工作不是为了钱，这个思想很好啊，适合学术，骚年加油！
 
 ## 工作的挑战
 
-其实学术工作的最大挑战，那些都不是最重要的。
+其实学术工作的最大挑战，这些困难都不是最重要的。
 
-> 最最重要的是，做学术你必须要有智力自信。
+> 最最重要的要求是，做学术你必须要有智力自信。
 
 其实我自己学物理的最大体会就是时刻感到一种无力感，智力的碾压感，聪明人太多的感觉。
 
 但是如果你走学术路，请放下侥幸，你必须是和这样一批人进行竞争。
 
-本质上，学术工作的收益曲线(用收入衡量)和个人能力是这样的:
+学术工作的收益曲线(用收入衡量)和个人能力大致是这样的:
 
 ![收益和能力曲线](/images/PHD/require.jpg)
 　
@@ -105,22 +107,22 @@ categories: 学习
 
 ## 总要求
 
-简单说，有如下 4　个方面的要求:
+简单说，有如下四个方面的要求:
 
-1. 学术素养。毕竟这是基础，你必须有较高的水平。
-2. 学术人脉。现在找学术教职，除了水平极高的，大多数人还是需要有人保驾护航，这就是考验人脉的时候了。当然很多时候这个也是看出身，看门第的。为什么诺奖，院士的弟子好找工作?当然这个也要考虑各种变动,比如老板跳槽了怎么办，帕金森症了怎么办(身边同学的亲身经历，老板帕金森了必须转)?
-3. 学术交流。作为一个外国人，你的口语怎么样，你能不能和人谈笑风生，这是非常重要的。美国人所谓的这个人很 social 就是和别人一起很开心聊着一些你作为外国人很难理解的东西，比如橄榄球，比如运动，比如一些隐晦的小笑话。
+1. 学术素养。毕竟这是基础，你必须有较高的学术水平。
+2. 学术人脉。现在找教职，除了水平极高的，大多数人还是需要有人保驾护航，这就是考验人脉的时候了。当然很多时候这个也是看出身，看门第的。为什么诺奖，院士的弟子好找工作?当然这个也要考虑各种变动,比如老板跳槽了怎么办，帕金森症了怎么办(身边同学的亲身经历，老板帕金森了必须调整自己的博士导师)?
+3. 学术交流。作为一个外国人，你的口语怎么样，你能不能和人谈笑风生，这是非常重要的。美国人所谓的这个人很 social 就是和别人一起很开心聊着一些你作为外国人很难理解的东西，比如橄榄球，比如运动，比如一些隐晦的小笑话和让人会心一笑的双关语。教授的这个高智商群体还特别欣赏那种 clever and smart 的双关语。
 4. 学术成果。学术成果其实就是论文，这个事实上很有运气的成分，你的老板是不是给你一个好课题，你是不是适合这个课题等等。
 
 ## 学术成果--10篇向上的文章
 
-上面四个方面，第四个方面是可以量化，其他的很多都是主观因素的内容，所以这里我把学术成果量化考虑下，提出具体的要求。
+上面四个方面，第四个方面是可以量化，其他的很多都是主观因素，所以这里我把学术成果量化考虑下，提出具体的要求。
 
-如果考虑博士5年的模型，假定第一年调整状态，熟悉课题和上课，第一年允许不发表论文。那么从第二年开始，你应该保持这样的发表文章速度，一年有3篇文章发表，同时有1篇是那种高 IF 的文章，化学是 JACS 级别,物理是 PRL 级别。按照这个要求 4　年毕业之后，你应该有 12篇文章，其中4到5篇，JACS或者PRL级别的论文，Nature,Science是对于非生命学科太难得了，所以不列入要求，当然有了就更好。同时要允许，其中有那么一些失败的研究，毕竟我们做的是科研不是炒菜，也不是工程项目，允许失败或者弯路，所以你需要至少 10 篇文章，其中5篇高IF。
+如果考虑博士5年的基本时长，假定第一年调整状态，熟悉课题和上课，第一年允许不发表论文。那么从第二年开始，你应该保持这样的发表文章速度，一年有3篇文章发表，同时有1篇是那种高 IF 的文章，化学是 JACS 级别,物理是 PRL 级别。按照这个要求 4 年毕业之后，你应该有 12 篇文章，其中 4 到 5 篇 JACS 或者 PRL 级别的论文。Nature, Science 对于非生命学科太难得了，所以不列入要求，当然有了就更好。同时要允许，其中有那么一些失败的研究，毕竟我们做的是科研不是炒菜，也不是工程项目，允许失败或者弯路，所以你需要至少 10 篇文章，其中 5 篇高 IF。
 
 当然这里的文章都要你是一作或者共同一作，挂名那就不好说了，毕竟这个很看运气的。有时候搭顺风车可以出一个好工作，这个也是可遇不可求的。
 
-当然写到这里，默默对比下，你会发现大部分博士生都不合格，其实这就对了，因为最终要淘汰至少 90%　的人啊，你觉得你轻轻松松能做到吗?
+当然写到这里，默默对比下，你会发现大部分博士生都不合格，其实这就对了，因为最终要淘汰至少 90% 的人啊，所以你经常听到博士生们说找到教职的论文要求水涨船高，其实就是因为最后无论如何要淘汰 90% 的人，所以如果大家都在拼命发文章，那就水涨船高喽。
 
 ## 理想的学术状态
 
@@ -132,9 +134,12 @@ categories: 学习
 
 第一份工作，已经完成了所有的数据，图表，结论也已经得出，剩下的主要是写作，投稿。这个过程大概需要3~6个月。
 
+
 第二份工作，是已经完成了智力挑战部分，剩下的工作纯是时间限制的，比如你已经知道大致的结论和预期，但是你的实验需要时间积累数据同时完成对照组这些。
 
+
 第三份工作，就是还在解决智力挑战部分。你的这份研究其实还在初级阶段，还需要不断讨论，思考，想新的方法，新的思路，尝试新的试剂，条件等等。这个工作时间不确定，但是必须不断挑战，在这个阶段你也需要不断和导师，同学进行讨论和探讨。
+
 
 第四份工作，其实就是给自己找课题。课题来源，老板指派，个人兴趣，交流讨论出来，看文献触类旁通得到灵感等等。这个阶段需要每天都做，但是不确定时间，但是也非常重要，这是科研的发动机和源头活水。
 
