--- a/_posts/2020-10-21-NorthWI.md
+++ b/_posts/2020-10-21-NorthWI.md
@@ -32,9 +32,9 @@ categories: 美国 游记
 
 ![景色2](/images/northWI/IMG_7423-PANO.jpg)
 
-秋光美，秋意浓，秋色艳，
+秋光美，秋意浓，秋色艳，数树深红出浅黄。
 
-![景色3](/images/northWI/IMG_7453.JPG)
+![景色3](/images/northWI/WechatIMG274.jpeg)
 
 ![景色4](/images/northWI/IMG_7452.JPG)
 
