--- a/_posts/2020-10-23-BBoxPair.md
+++ b/_posts/2020-10-23-BBoxPair.md
@@ -112,10 +112,9 @@ fig.savefig('rect2.png', dpi=300, bbox_inches='tight')
 
 我直接上程序吧，这里有几个 varibale setting 在前面。
 
-当然 IoU 计算也是常用的知识点，我这里直接拷贝下别处的标准答案 [常考题 | IoU 计算](https://mp.weixin.qq.com/s/j3HWaFJqb7Jvx7xsR7Xksg)
+当然 IoU 计算也是常用的知识点，我这里直接拷贝下别处的标准答案 [常考题 IoU 计算](https://mp.weixin.qq.com/s/j3HWaFJqb7Jvx7xsR7Xksg)
 
-```Python
-
+```python
 # boxA 存储的是边界框的左上顶点坐标和右下顶点坐标
 # boxA=[x1,y1,x2,y2]
 def iou(boxA, boxB):
@@ -134,16 +133,8 @@ def iou(boxA, boxB):
     union = Sa+Sb-inter
     iou = inter/union
     return iou
-
-if __name__ == "__main__":
-    boxA = [0,0,5,5]
-    boxB = [1,1,6,6]
-    print(iou(boxA,boxB)) # inter = 16 union=34
-    boxA = [0,0,5,5]
-    boxB = [5,5,6,6]
-    print(iou(boxA,boxB)) # inter = 0 union=26
-
 ```
+
 算法如下，需要注意，col 没有便捷的操作，所以需要一个 loop
 
 ```python
