--- a/_posts/2021-07-25-Moving21.md
+++ b/_posts/2021-07-25-Moving21.md
@@ -20,7 +20,7 @@ categories: 生活
 
 其实 U-Haul 官网是有一个视频，但是这个视频放在网页的角落里面，实在是非常容易忽略。[U-Haul Cargo Van 介绍页面](https://www.uhaul.com/Truck-Rentals/Cargo-Van/)，视频链接[How to Load a Mattress into a Cargo Van](https://youtu.be/A4s1SkvCuyo)。我猜测应该很多人抱怨过，所以特地出了视频，但是居然不放在最明显的位置，是不是想让大家多开几趟，赚赚公里数。
 
-![放床垫后效果图](/images/UHaul/CargoVan.png)
+![放床垫后效果图](/images/UHaul/cargoVan.png)
 
 其实装完床垫最尴尬的是这个空间被限制了高度和宽度，桌子不太好运输。不过好在这次有好几个同学，三辆 SUV 都一趟解决了。
 
@@ -33,10 +33,12 @@ categories: 生活
 3. Progressive 车险
 4. Table AR-11
 5. 银行
-	a. Citi
-	b. Amex == > each card needs to be changed individually
-	c. Chase
-	d. Discover
+
+	* Citi
+	* Amex == > each card needs to be changed individually
+	* Chase
+	* Discover
+
 6. My UW
 	a. My Personal Information
 	b. Student Center
