--- a/_posts/2021-07-25-Moving21.md
+++ b/_posts/2021-07-25-Moving21.md
@@ -14,15 +14,23 @@ categories: 生活
 
 ## U-Haul，尽量租大车
 
-[U-Haul](https://www.uhaul.com/) 真的是非常方便的租车服务。我3年前用过 U-Haul 搬家，当时租的是 10 foot Truck，当时这车利用率大概不到 1/3，除了床占了一半空间别的地方都是空的。这三年也没怎么添加东西，感觉这次可以租 9 foot 的 Cargo Van。实际使用才发现这个 Cargo Van 说是可以装 Queen Size 的床，但是，是斜着放的，坑爹了。。。
+[U-Haul](https://www.uhaul.com/) 真的是非常方便的租车服务。提供了如下的多个选择。
 
 ![tu１](/images/UHaul/UHaulCars.png)
 
-其实 U-Haul 官网是有一个视频，但是这个视频放在网页的角落里面，实在是非常容易忽略。[U-Haul Cargo Van 介绍页面](https://www.uhaul.com/Truck-Rentals/Cargo-Van/)，视频链接[How to Load a Mattress into a Cargo Van](https://youtu.be/A4s1SkvCuyo)。我猜测应该很多人抱怨过，所以特地出了视频，但是居然不放在最明显的位置，是不是想让大家多开几趟，赚赚公里数。
+我3年前用过 U-Haul 搬家，当时租的是 10 foot Truck，当时这车利用率大概不到 1/3，除了床占了一半空间别的地方都是空的。这三年也没怎么添加东西，感觉这次可以租 9 foot 的 Cargo Van。实际使用才发现这个 Cargo Van 说是可以装 Queen Size 的床，但是，是斜着放的，坑爹了。。。
+
+U-Haul 官网是有一个视频，但是这个视频放在网页的角落里面，实在是非常容易忽略。[U-Haul Cargo Van 介绍页面](https://www.uhaul.com/Truck-Rentals/Cargo-Van/)，视频链接[How to Load a Mattress into a Cargo Van](https://youtu.be/A4s1SkvCuyo)。我猜测应该很多人抱怨过，所以特地出了视频，但是居然不放在最明显的位置，是不是想让大家多开几趟，赚赚公里数。
 
 ![放床垫后效果图](/images/UHaul/cargoVan.png)
 
 其实装完床垫最尴尬的是这个空间被限制了高度和宽度，桌子不太好运输。不过好在这次有好几个同学，三辆 SUV 都一趟解决了。
+
+所以简单的结论就是:
+
+> 尽量租大车，方便装东西，尽量一趟搬完。
+
+主要是大车可以把占用体积不大的床，床垫立起来放，这样有完整的空间可以利用而不是斜着放。
 
 ## 改地址
 
