--- a/_posts/2021-09-28-Alaska.md
+++ b/_posts/2021-09-28-Alaska.md
@@ -24,7 +24,15 @@ categories: 美国 游记
 
 ### 安克雷奇 and FairBanks
 
+我把安克雷奇和 FairBanks 放到一起写，因为这两个都是阿拉斯加仅有的几个大城市了。他们的市容市貌其实都差不多，都是典型的高纬度北方现代化城市。特别是安克雷奇真实非常现代，购物，吃饭都非常方便。
 
+展示几张市容图吧。
+
+![City1](/images/Alaska/city1.JPG)
+
+![City2](/images/Alaska/city2.JPG)
+
+![City3](/images/Alaska/city3.JPG)
 
 ### 北极圈
 
